--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <a download href="http://www.bhagavatgita.ru/files/Bhagavad-gita_As_It_Is.pdf">bhagavat gita download link</a>
   <br>
   <br>
-  <a href="contactinfo.html"><strong>Contat details</strong> </a>
+  <a href="https://harpal9.github.io/CV/contactinfo.html"><strong>Contat details</strong> </a>
 
 
 
